--- a/src/src/components/Quote.scss
+++ b/src/src/components/Quote.scss
@@ -25,6 +25,6 @@
 
 @include media-breakpoint-up(md) {
   .quote {
-    margin: 118px 0 36px;
+    margin: 118px 0 50px;
   }
 }
