--- a/src/src/scenes/Books.scss
+++ b/src/src/scenes/Books.scss
@@ -19,7 +19,7 @@ a.books-link {
       img {
         display: block;
         margin: 0 auto;
-        padding: 35px 10px 10px 0;
+        padding: 30px 10px 10px 0;
       }
     }
 
